# icu-py

./: .gitignore  .gitmodules  CHANGES  CREDITS  LICENSE  MANIFEST.in  README.md  _icu.cpp  _icu_.cpp  bases.cpp  calendar.cpp  char.cpp  charset.cpp  collator.cpp  collator.h  common.cpp  common.h  dateformat.cpp  dateformat.h  displayoptions.cpp  displayoptions.h  errors.cpp  format.cpp  format.h  gender.cpp  iterators.cpp  layoutengine.cpp  locale.cpp  locale.h  macros.h  measureunit.cpp  measureunit.h  messagepattern.cpp  messagepattern.h  normalizer.cpp  numberformat.cpp  numberformat.h  pyproject.toml  regex.cpp  script.cpp  (+8 more)
.github/workflows/: _build_wheels.yaml  tests.yaml
py/icu/: __init__.py
test/: test_DateTimeParserGenerator.py  test_DateTimePatternGenerator.py  test_Locale.py  test_LocaleMatcher.py  test_MessagePattern.py  test_NumberFormat.py  test_NumberFormatter.py  test_Property.py  test_Regex.py  test_TimeZone.py
